--- a/src/App.css
+++ b/src/App.css
@@ -6,9 +6,9 @@
 
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-    sans-serif;
+  font-family: "Montserrat", sans-serif;
+  font-weight: 500;
+  line-height: 1.6;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
@@ -19,10 +19,15 @@ code {
 }
 
 .container {
-  background: linear-gradient(#6880eb, #f703fe);
+  background: linear-gradient(
+    to left top,
+    var(--color-primary-2),
+    var(--color-primary-1)
+  );
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   margin: 0;
+  min-height: 100vh;
 }
